--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
         </div>
     </div>
-
+    <script src="config.js"></script>
     <script type="module" src="auth.js"></script>
     <script type="module" src="script.js"></script>
 </body>
