--- a/markups/SecureBanking.html
+++ b/markups/SecureBanking.html
@@ -228,7 +228,7 @@
         </div>
     </div>
 
-
+<script src="../config.js"></script>
 <script type="module"   src="../script.js" ></script>
 <!-- <script  src="../auth.js"></script> -->
 </body>
