Initial commit for frontend

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="mt-6 text-center">
                     <p class="text-gray-600 dark:text-gray-400">
                         Already have an account?
-                        <button onclick="showLogin()" class="text-primary hover:underline font-medium">Sign in</button>
+                        <button id="showLogin" class="text-primary hover:underline font-medium">Sign in</button>
                     </p>
                 </div>
             </div>
