Initial commit for frontend

--- a/markups/paybills.html
+++ b/markups/paybills.html
@@ -742,6 +742,6 @@
             </div>
         </div>
     </div>
-<script src="paybills.js" defer></script>
+<script src="../paybills.js" defer></script>
 </body>
 </html>
